<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.cowwoc.requirements</groupId>
	<artifactId>requirements</artifactId>
	<version>13.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>requirements</name>
	<description>A fluent API for enforcing design contracts with automatic message generation</description>
	<url>https://github.com/cowwoc/requirements.java/</url>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/cowwoc/requirements.java/</url>
		<connection>scm:git:https://github.com/cowwoc/requirements.java/</connection>
		<developerConnection>scm:git:https://github.com/cowwoc/requirements.java/</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<id>cowwoc</id>
			<name>Gili Tzabari</name>
			<email>cowwoc2020@gmail.com</email>
		</developer>
	</developers>

	<distributionManagement>
		<snapshotRepository>
			<id>maven-central-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>maven-central-releases</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>

	<modules>
		<module>annotation</module>
		<module>java</module>
		<module>guava</module>
		<module>jackson</module>
		<module>test</module>
		<module>benchmark</module>
	</modules>

	<properties>
		<project.root.basedir>${project.basedir}</project.root.basedir>
		<!--		<license.verbose>true</license.verbose>-->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.version>3.9.12</maven.version>
		<maven.compiler.release>25</maven.compiler.release>
		<guava.version>33.5.0-jre</guava.version>
		<error_prone_annotations.version>2.26.1</error_prone_annotations.version>
		<jackson.version>3.0.3</jackson.version>
		<slf4j.version>2.0.17</slf4j.version>
		<testng.version>7.11.0</testng.version>
		<jmh.version>1.37</jmh.version>
		<pmd.version>7.20.0</pmd.version>
		<checkstyle.plugin.version>3.6.0</checkstyle.plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>requirements-annotation</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>requirements-benchmark</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>requirements-java</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>requirements-guava</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-core</artifactId>
				<version>3.9.12</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>tools.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjdk.jmh</groupId>
				<artifactId>jmh-core</artifactId>
				<version>${jmh.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjdk.jmh</groupId>
				<artifactId>jmh-generator-annprocess</artifactId>
				<version>${jmh.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.5.24</version>
			</dependency>
			<dependency>
				<groupId>com.github.javaparser</groupId>
				<artifactId>javaparser-core</artifactId>
				<version>3.27.1</version>
			</dependency>
			<dependency>
				<groupId>io.github.java-diff-utils</groupId>
				<artifactId>java-diff-utils</artifactId>
				<version>4.16</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.cowwoc.pouch</groupId>
				<artifactId>pouch-core</artifactId>
				<version>9.1</version>
			</dependency>
			<dependency>
				<groupId>org.twdata.maven</groupId>
				<artifactId>mojo-executor</artifactId>
				<version>2.4.1</version>
			</dependency>
			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>${testng.version}</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.27.6</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.12.0</version>
					<executions>
						<execution>
							<id>default-cli</id>
							<goals>
								<goal>aggregate</goal>
							</goals>
							<!-- Reminder: Use "-pl !test,!benchmark" to exclude test modules -->
							<configuration>
								<failOnWarnings>true</failOnWarnings>
								<show>public</show>
								<additionalOptions>
									<!--
									Maven plugins cannot be full-fledged modules due to Maven's use of split packages.
									automatic-modules are treated as unnamed modules so we need to explicitly export packages
									to them.
									-->
									<option>--add-modules</option>
									<option>java.xml</option>
									<!-- https://stackoverflow.com/a/54468139/14731 -->
									<option>--override-methods</option>
									<option>summary</option>
								</additionalOptions>
								<validateLinks>true</validateLinks>
								<links>
									<!--
									Cannot link to Guava's Javadoc due to https://github.com/google/guava/issues/5653.

									<link>https://javadoc.io/doc/com.google.guava/guava/${guava.version}/</link>
									-->
									<link>
										https://javadoc.io/doc/tools.jackson.core/jackson-databind/${jackson.version}/
									</link>
								</links>
								<excludePackageNames>
									io.github.cowwoc.requirements13.java.internal,
									io.github.cowwoc.requirements13.java.internal.*,
									io.github.cowwoc.requirements13.guava.internal,
									io.github.cowwoc.requirements13.guava.internal.*,
									io.github.cowwoc.requirements13.jackson.internal,
									io.github.cowwoc.requirements13.jackson.internal.*
								</excludePackageNames>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>4.0.0-M16</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>2.7.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.9.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.28.0</version>
					<dependencies>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-core</artifactId>
							<version>${pmd.version}</version>
						</dependency>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-java</artifactId>
							<version>${pmd.version}</version>
						</dependency>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-javascript</artifactId>
							<version>${pmd.version}</version>
						</dependency>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-jsp</artifactId>
							<version>${pmd.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${checkstyle.plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>11.0.0</version>
						</dependency>
					</dependencies>
					<configuration>
						<configLocation>config/checkstyle.xml</configLocation>
						<consoleOutput>true</consoleOutput>
						<failOnViolation>true</failOnViolation>
						<linkXRef>false</linkXRef>
						<includeTestSourceDirectory>true</includeTestSourceDirectory>
						<excludeGeneratedSources>true</excludeGeneratedSources>
					</configuration>
					<executions>
						<execution>
							<phase>validate</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>3.2.8</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
							<configuration>
								<bestPractices>true</bestPractices>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.20.1</version>
					<configuration>
						<ruleSet>
							<rules>
								<rule>
									<groupId>org.apache.maven.plugins</groupId>
									<ignoreVersions>
										<ignoreVersion>
											<type>regex</type>
											<version>.+(-|\.)(alpha|beta).+|.+-rc(-|\.).*</version>
										</ignoreVersion>
									</ignoreVersions>
								</rule>
								<rule>
									<ignoreVersions>
										<ignoreVersion>
											<type>regex</type>
											<version>(?i)(.+-snapshot|.+(-|\.)M\d|.+(-|\.)(alpha|beta).+)|.+-rc(-|\.|\d).*</version>
										</ignoreVersion>
									</ignoreVersions>
								</rule>
							</rules>
						</ruleSet>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${maven.version}</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<tagNameFormat>release-@{project.version}</tagNameFormat>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<inherited>false</inherited>
				<executions>
					<execution>
						<id>3rd-party-licenses</id>
						<goals>
							<goal>aggregate-add-third-party</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<outputDirectory>${project.basedir}</outputDirectory>
							<thirdPartyFilename>LICENSE-3RD-PARTY.md</thirdPartyFilename>
							<fileTemplate>${project.root.basedir}/config/license-maven-plugin.ftl</fileTemplate>
							<missingFile>${project.root.basedir}/config/missing-licenses.txt</missingFile>
							<licenseMerges>
								<licenseMerge>Apache License, Version 2.0|Apache 2.0|Apache-2.0|
									Apache License, Version 2.0, GNU Lesser General Public License|
									The Apache Software License, Version 2.0
								</licenseMerge>
								<licenseMerge>Eclipse Public License (EPL), Version 1.0|Eclipse Public License - v 1.0|Eclipse
									Public License - v 1.0, GNU Lesser General Public License|Eclipse Public License, Version
									1.0
								</licenseMerge>
								<licenseMerge>MIT License|The MIT License|MIT</licenseMerge>
								<licenseMerge>GNU Lesser General Public License (LGPL)|GNU Lesser General Public License
								</licenseMerge>
								<licenseMerge>Common Development And Distribution License (CDDL) + GPL, version 2.0, with
									classpath exception|CDDL + GPLv2 with classpath exception
								</licenseMerge>
							</licenseMerges>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<includeTests>true</includeTests>
					<rulesets>
						<ruleset>${project.root.basedir}/config/pmd.xml</ruleset>
						<ruleset>${project.root.basedir}/config/pmd-main.xml</ruleset>
					</rulesets>
					<printFailingErrors>true</printFailingErrors>
					<excludeFromFailureFile>${project.root.basedir}/config/pmd-file-exclusions.properties
					</excludeFromFailureFile>
					<excludes>
						<exclude>**/jmh_generated/**</exclude>
					</excludes>
					<analysisCache>true</analysisCache>
					<linkXRef>false</linkXRef>
					<targetJdk>25</targetJdk>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>